# avmnif-rs

./: Cargo.toml  LICENSE  README.md
docs/: atoms.md  nif_collection.md  port_collection.md  port_memory.md  resources.md  tagged.md  testing.md
src/: atom.rs  context.rs  lib.rs  log.rs  port.rs  registry.rs  resource.rs  tagged.rs  term.rs
src/c/: logshim.c
src/testing/: fixtures.rs  helpers.rs  mocks.rs  mod.rs  nifs.rs  ports.rs  resources.rs  tagged.rs
src/tests/: registry.rs
