[package]
name = "avmnif-rs"
version = "0.2.0"
edition = "2021"
description     = "Safe NIF toolkit for AtomVM written in Rust"
license         = "MIT"
repository      = "https://github.com/HeroesLament/avmnif-rs"
documentation   = "https://docs.rs/avmnif-rs"
readme          = "README.md"

[dependencies]
cc = "1.2.32"
paste = "1.0.15"


[features]
default = []

[package.metadata.docs.rs]
all-features = true
